# reflex-native

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  default.nix  host.project  ios.project  reflex-platform-version.json  uikit.project
examples/draggy/: default.nix  reflex-native-draggy.cabal
examples/draggy/src-bin/: uikit.hs
examples/draggy/src/Reflex/Native/Examples/: Draggy.hs
hs-uikit/: default.nix  hs-uikit.cabal
hs-uikit/cbits/: GenericAppDelegate.h  GenericAppDelegate.m  GenericGestureRecognizerTarget.h  GenericGestureRecognizerTarget.m  GenericView.h  GenericView.m  GenericViewController.h  GenericViewController.m  MainThread.m  NSMutableArrayMethods.m  NSStringMethods.m  ObjCMethods.m  UIAccessibilityMethods.m  UIColorMethods.m  UIFontMethods.m  UIGestureRecognizerMethods.m  UILabelMethods.m  UIPanGestureRecognizerMethods.m  UIViewControllerMethods.m  UIViewMethods.m  UIWindowMethods.m
hs-uikit/src/: CoreAnimation.hs  CoreGraphics.hs  Foundation.hs  ObjC.hs  UIKit.hs
hs-uikit/src/Foundation/: NSMutableArray.hs  NSString.hs  Types.hs
hs-uikit/src/UIKit/: Types.hs  UIAccessibility.hs  UIColor.hs  UIFont.hs  UIGestureRecognizer.hs  UILabel.hs  UIPanGestureRecognizer.hs  UIView.hs  UIViewController.hs  UIWindow.hs
hs-uikit/src/UIKit/Generic/: AppDelegate.hs  GestureRecognizerTarget.hs  View.hs  ViewController.hs
reflex-native/: default.nix  reflex-native.cabal
reflex-native-test/: reflex-native-test.cabal
reflex-native-test/src/Reflex/Native/: Test.hs
reflex-native-test/src/Reflex/Native/Test/: Evaluation.hs  Optics.hs  Runner.hs  Types.hs  ViewBuilder.hs
reflex-native-test/test/: TestViewBuilderSuite.hs
reflex-native-uikit/: default.nix  reflex-native-uikit.cabal
reflex-native-uikit/cbits/: UIKitViewBuilder.m
reflex-native-uikit/src/Reflex/UIKit/: Config.hs  Conversions.hs  Layout.hs  Main.hs  Specializations.hs  Style.hs  ViewBuilder.hs
reflex-native/src/Reflex/: Native.hs
reflex-native/src/Reflex/Native/: AdjustingBuilder.hs  Color.hs  Font.hs  Geometry.hs  Gesture.hs  TextConfig.hs  TextStyle.hs  ViewConfig.hs  ViewLayout.hs  ViewStyle.hs
reflex-native/src/Reflex/Native/ViewBuilder/: Class.hs
reflex-native/src/Reflex/Native/Widget/: Basic.hs  Customization.hs
