name:           hs-uikit
version:        0.1.0.0
synopsis:       Bindings to UIKit
description:    FFI bindings for UIKit, Foundation, CoreGraphics, etc.
author:         Confer Health
maintainer:     oss@confer.health
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
homepage:       https://github.com/reflex-frp/reflex-native
bug-reports:    https://github.com/reflex-frp/reflex-native/issues

library
  default-language: Haskell2010
  exposed-modules:
      CoreAnimation
      CoreGraphics
      Foundation
      Foundation.NSMutableArray
      Foundation.NSString
      Foundation.Types
      ObjC
      UIKit
      UIKit.Generic.AppDelegate
      UIKit.Generic.GestureRecognizerTarget
      UIKit.Generic.View
      UIKit.Generic.ViewController
      UIKit.Types
      UIKit.UIAccessibility
      UIKit.UIColor
      UIKit.UIFont
      UIKit.UIGestureRecognizer
      UIKit.UILabel
      UIKit.UIPanGestureRecognizer
      UIKit.UIView
      UIKit.UIViewController
      UIKit.UIWindow
  hs-source-dirs: src
  c-sources:
      cbits/GenericAppDelegate.m
      cbits/GenericGestureRecognizerTarget.m
      cbits/GenericView.m
      cbits/GenericViewController.m
      cbits/MainThread.m
      cbits/NSMutableArrayMethods.m
      cbits/NSStringMethods.m
      cbits/ObjCMethods.m
      cbits/UIAccessibilityMethods.m
      cbits/UIColorMethods.m
      cbits/UIFontMethods.m
      cbits/UIGestureRecognizerMethods.m
      cbits/UILabelMethods.m
      cbits/UIPanGestureRecognizerMethods.m
      cbits/UIViewControllerMethods.m
      cbits/UIViewMethods.m
      cbits/UIWindowMethods.m
  ghc-options:
      -Wall -fwarn-tabs -funbox-strict-fields -O2 -fspecialise-aggressively -ddump-simpl -ddump-to-file -dsuppress-coercions -dsuppress-idinfo
      -optc-Wno-expansion-to-defined -optc-Wno-nullability-inferred-on-nested-type -optc-Wno-nullability-completeness-on-arrays
      -optc-Wno-nullability-completeness -optc-Wno-unknown-attributes
  ghc-prof-options: -fprof-auto
  cc-options:
      -Wno-expansion-to-defined -Wno-nullability-inferred-on-nested-type -Wno-nullability-completeness-on-arrays -Wno-nullability-completeness
      -Wno-unknown-attributes -fobjc-arc
  build-depends:
      base
    , monad-control == 1.0.*
    , text == 1.2.*
    , transformers-base == 0.4.*
  frameworks:
      CoreGraphics
      Foundation
      QuartzCore
      UIKit

