name:           reflex-native-uikit
version:        0.1.0.0
synopsis:       Reflex FRP using UIKit directly, via hs-uikit
description:    Reflex view building and implementation of Reflex Native cross-platform interface for UIKit, allowing Reflex applications to be developed without use of DOM.
author:         Confer Health
maintainer:     oss@confer.health
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
homepage:       https://github.com/reflex-frp/reflex-native
bug-reports:    https://github.com/reflex-frp/reflex-native/issues

library
  default-language: Haskell2010
  exposed-modules:
      Reflex.UIKit.Config
      Reflex.UIKit.Conversions
      Reflex.UIKit.Layout
      Reflex.UIKit.Main
      Reflex.UIKit.Specializations
      Reflex.UIKit.Style
      Reflex.UIKit.ViewBuilder
  hs-source-dirs: src
  c-sources:
      cbits/UIKitViewBuilder.m
  ghc-options:
      -Wall -fwarn-tabs -funbox-strict-fields -O2 -fspecialise-aggressively -ddump-simpl -ddump-to-file -dsuppress-coercions -dsuppress-idinfo
      -optc-Wno-expansion-to-defined -optc-Wno-nullability-inferred-on-nested-type -optc-Wno-nullability-completeness-on-arrays
      -optc-Wno-nullability-completeness -optc-Wno-unknown-attributes
  ghc-prof-options: -fprof-auto
  cc-options:
      -Wno-expansion-to-defined -Wno-nullability-inferred-on-nested-type -Wno-nullability-completeness-on-arrays -Wno-nullability-completeness
      -Wno-unknown-attributes -fobjc-arc
  build-depends:
      base
    , containers == 0.5.*
    , dependent-map == 0.2.*
    , dependent-sum >= 0.3 && < 0.5
    , exception-transformers == 0.4.*
    , hs-uikit
    , mtl >= 2.1 && < 2.3
    , primitive >= 0.5 && < 0.7
    , ref-tf == 0.4.*
    , reflex
    , reflex-native
    , transformers >= 0.3 && < 0.6

